--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,22 +1,31 @@
 Package: blockcluster
 Type: Package
-Title: Co-Clustering package for Binary, contingency and continuous
+Title: Co-Clustering package for Binary, Contingency and Continuous
         data-sets.
-Version: 1.0
+Version: 1.01
+Encoding: UTF-8
 Date: 2012-02-22
-Author: Parmeet Bhatia and Serge Iovleff and G<c3><a9>rard Goavert,
-        with contributions from Christophe Biernacki and Gilles Celeux.
+Author: Parmeet Bhatia & Serge Iovleff & Gerard Goavert, with
+        contributions from Christophe Biernacki and Gilles Celeux.
 Maintainer: Parmeet Singh Bhatia <parmeet.bhatia@inria.fr>
-Description: This package allows to co-cluster Binary, contingency and
+Description: Simultaneous clustering of rows and columns, usually
+        designated by biclustering, co-clustering or block clustering,
+        is an important technique in two way data analysis. It consists
+        of estimating a mixture model which takes into account the
+        block clustering problem on both the individual and variables
+        sets. The blockcluster package provides a bridge between the
+        C++ core library and the R statistical computing environment.
+        This package allows to co-cluster Binary, contingency and
         continuous data-sets. It also provides utility functions to
         visualize the results. This package may be useful for various
-        applications in fields of Data mining, Biology etc.
+        applications in fields of Data mining,Information retrieval,
+        Biology, computer vision and many more.
 License: GPL (>= 3)
 LazyLoad: yes
 Depends: Rcpp (>= 0.9.9), R (>= 2.14), methods
 LinkingTo: Rcpp
 Collate: 'Strategy.R' 'optionclasses.R' 'summary.R' 'plot.R' 'onload.R'
         'Rcoclust.R' 'cocluster.R'
-Packaged: 2012-07-04 15:28:13 UTC; modal-laptop
+Packaged: 2012-09-05 11:30:02 UTC; root
 Repository: CRAN
-Date/Publication: 2012-07-04 16:56:28
+Date/Publication: 2012-09-05 13:23:49
