--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,5 @@
 exportClasses(BinaryOptions)
+exportClasses(CategoricalOptions)
 exportClasses(CommonOptions)
 exportClasses(ContingencyOptions)
 exportClasses(ContinuousOptions)
@@ -9,4 +10,6 @@ exportMethods(plot)
 exportMethods(summary)
 exportPattern("^[[:alpha:]]+")
 importFrom(graphics,plot)
+import(methods)
+import(Rcpp)
 useDynLib(blockcluster)
