--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: blockcluster
 Type: Package
-Title: Co-Clustering package for binary, contingency, continuous and
-        categorical data-sets.
-Version: 3.0.1
+Title: Coclustering package for binary, contingency, continuous and
+        categorical data-sets
+Version: 3.0.2
 Encoding: UTF-8
-Date: 2013-12-20
+Date: 2015-01-22
 Author: Parmeet Singh Bhatia <bhatia.parmeet@gmail.com>, Serge Iovleff, Gerard
     Goavert, Vincent Brault, with contributions from Christophe Biernacki and
     Gilles Celeux.
@@ -23,7 +23,7 @@ Description: Simultaneous clustering of rows and columns, usually designated by
     information about the project and comprehensive tutorial can be found on
     the link mentioned in URL.
 License: GPL (>= 3)
-URL: https://modal.lille.inria.fr/pages/blockcluster.php
+URL: https://modal.lille.inria.fr/wikimodal/doku.php?id=blockcluster
 BugReports:
         https://gforge.inria.fr/forum/forum.php?forum_id=11190&group_id=3679
 LazyLoad: yes
@@ -33,7 +33,7 @@ LinkingTo: Rcpp, RcppEigen
 SystemRequirements: GNU make
 Collate: 'Rcoclust.R' 'Strategy.R' 'summary.R' 'plot.R'
         'optionclasses.R' 'onattach.R' 'cocluster.R'
-Packaged: 2014-01-16 09:08:17 UTC; modal
+Packaged: 2015-01-23 09:24:43 UTC; elvinz
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2014-01-16 23:08:20
+Date/Publication: 2015-01-23 12:38:02
