--- a/src/coclust/makefile
+++ b/src/coclust/makefile
@@ -1,16 +1,12 @@
-include $(R_HOME)/etc${R_ARCH}/Makeconf
--include ~/.R/Makevars
-MYCXXFLAGS = -DNDEBUG -DRPACKAGE $(shell $(R_HOME)/bin/Rscript -e "cat(RcppEigen:::RcppEigenCxxFlags())")
 LIB = libcoclust.a
 SRCS = $(wildcard src/Algorithms/*.cpp\
                   src/CoClustFacade/*.cpp\
                   src/Strategy/*.cpp\
                   src/InputParameters/*.cpp\
                   src/Models/*.cpp)
-
 OBJS= $(SRCS:%.cpp=%.o)
 %.o: %.cpp
-	$(CXX) $(CXXFLAGS) ${CPICFLAGS} $(MYCXXFLAGS) $< -c -o $@
+	$(CXX) $(CO_CXXFLAGS) $(CO_CPPFLAGS) $< -c -o $@
 	
 lib: $(LIB)
 
@@ -20,5 +16,7 @@ $(LIB): $(OBJS)
 .PHONY: clean
 
 clean:
-	@-rm -rf .libs _libs $(LIB)
-	@-rm -f *.o
+	@-rm $(OBJS)
+
+clean_all:
+	@-rm $(OBJS) $(LIB)
