--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,18 @@
 Package: blockcluster
 Type: Package
-Title: Coclustering package for binary, contingency, continuous and
-        categorical data-sets
-Version: 3.0.2
+Title: Coclustering Package for Binary, Categorical, Contingency and
+        Continuous Data-Sets
+Version: 4.0.2
 Encoding: UTF-8
-Date: 2015-01-22
-Author: Parmeet Singh Bhatia <bhatia.parmeet@gmail.com>, Serge Iovleff, Gerard
-    Goavert, Vincent Brault, with contributions from Christophe Biernacki and
-    Gilles Celeux.
-Copyright: Parmeet Singh Bhatia
-Maintainer: Vincent KUBICKI <vincent.kubicki@inria.fr>
+Date: 2015-11-26
+Authors@R: c( person("Serge", "Iovleff", role = c("aut","cre"), email = "Serge.Iovleff@stkpp.org")
+            , person("Parmeet", "Singh Bhatia", role = "aut", email = "bhatia.parmeet@gmail.com")
+            , person("Vincent", "Kubicki", role = "ctb", email = "Vincent.Kubicki@inria.fr")
+            , person("Gerard", "Goavert", role = "ctb")
+            , person("Vincent", "Brault", role = "ctb")
+            , person("Christophe", "Biernacki", role = "ctb")
+            , person("Gilles", "Celeux", role = "ctb"))
+Copyright: Inria
 Description: Simultaneous clustering of rows and columns, usually designated by
     biclustering, co-clustering or block clustering, is an important technique
     in two way data analysis. It consists of estimating a mixture model which
@@ -23,17 +26,28 @@ Description: Simultaneous clustering of rows and columns, usually designated by
     information about the project and comprehensive tutorial can be found on
     the link mentioned in URL.
 License: GPL (>= 3)
-URL: https://modal.lille.inria.fr/wikimodal/doku.php?id=blockcluster
+URL: https://gforge.inria.fr/projects/cocluster/
 BugReports:
         https://gforge.inria.fr/forum/forum.php?forum_id=11190&group_id=3679
 LazyLoad: yes
-Depends: R (>= 2.14), methods
-Imports: Rcpp (>= 0.9.9)
-LinkingTo: Rcpp, RcppEigen
+Depends: R (>= 3.0.2), rtkore (>= 1.0.0)
+Imports: methods
+LinkingTo: Rcpp
 SystemRequirements: GNU make
-Collate: 'Rcoclust.R' 'Strategy.R' 'summary.R' 'plot.R'
-        'optionclasses.R' 'onattach.R' 'cocluster.R'
-Packaged: 2015-01-23 09:24:43 UTC; elvinz
+Collate: 'coclusterStrategy.R' 'optionclasses.R' 'onattach.R'
+        'RCocluster.R' 'cocluster.R' 'coclusterBinary.R'
+        'coclusterCategorical.R' 'coclusterContingency.R'
+        'coclusterContinuous.R'
 NeedsCompilation: yes
+Packaged: 2015-11-27 08:53:47 UTC; iovleff
+RoxygenNote: 5.0.1
+Author: Serge Iovleff [aut, cre],
+  Parmeet Singh Bhatia [aut],
+  Vincent Kubicki [ctb],
+  Gerard Goavert [ctb],
+  Vincent Brault [ctb],
+  Christophe Biernacki [ctb],
+  Gilles Celeux [ctb]
+Maintainer: Serge Iovleff <Serge.Iovleff@stkpp.org>
 Repository: CRAN
-Date/Publication: 2015-01-23 12:38:02
+Date/Publication: 2015-11-27 11:41:12
